Aggiorna la licenza e il contenuto di diverse pagine HTML per riflettere il cambiamento dello stato del progetto a non open-source.

--- a/header.html
+++ b/header.html
@@ -1,15 +1,14 @@
-<!---///  
-© 2025 GENiALABILE. All Rights Reserved.  
-A Bio-GPT Project—Designed by seiseisette.    
+<!---//
+# Gen-IA
+Advanced-GPT inspiring multidimensional solutions and unlocking creative potential.
+
+## License
+© 2025 GENiALABILE. All Rights Reserved.
+A GPT Based Project—Designed by @seiseisette. 
+This project is no longer available as open-source. Updated to 10 Jan 2025.
+Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
 ---
- 2025 Copyright @seiseisette | https://x.com/seiseisette
----
-Licensed under the Apache License, Version 2.0.
-You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0  
----
-hptts://www.genialabile.com | DARK MODE x Ultra-Minimalist Visual Landing Page  
----
-header.html + CSS
+hptts://www.genialabile.com/header.html
 //-->
 
 
