Aggiunto file css-banner.html e css.html. Aggiornato il footer e le condizioni d'uso con nuove informazioni di copyright e link.

--- a/footer.html
+++ b/footer.html
@@ -11,21 +11,23 @@ Use, distribution, or modification of this project is strictly prohibited withou
 hptts://www.genialabile.com/footer.html
 //--->
 
+<!---// STARTLINE & HI HI //--->
+    <footer> <b></b>
+        © 2025 <a href="https://www.genialabile.com/" style="font-weight: normal">GENiALABILE</a>.
+        All Rights Reserved.
+        A Bio-GPT Project—Designed by <a href= "https://github.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.
+        Powered by <a href= "https://openai.com/" style="font-weight: normal">OpenAI</a>.<br>
+        <!-- <br><br><br><br><br><br><br> --->
+            <p class="imp-p" style="font-size: 0.6rem;">
+                <br>
+                <a href="https://www.genialabile.com/terms-and-conditions" style="font-weight: normal">TERMS</a> | 
+                <a href="https://www.genialabile.com/privacy-policy" style="font-weight: normal">PRIVACY</a> | 
+                <a href="https://www.genialabile.com/cookie-policy" style="font-weight: normal">COOKIES</a> | 
+                <a href="https://www.genialabile.com/accessibility" style="font-weight: normal">ACCESS</a> | 
+                <a href="https://www.genialabile.com/contacts" style="font-weight: normal">CONTACT</a>
+                <!-- | <a href="https://www.genialabile.com//faq" style="font-weight: normal">FAQ</a>  -->
+            </p>
+        <!-- <br><br><br><br><br><br><br> --->
+    </footer>
 
-<footer> <b></b>
-    ©2025 <a href="/" style="font-weight: normal">GENiALABILE</a>.
-    All Rights Reserved.
-    A Bio-GPT Project—Designed by <a href= "https://github.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.
-    Powered by <a href= "https://openai.com/" style="font-weight: normal">OpenAI</a>.<br>
-    <!-- Musts Links -->
-        <p class="imp-p" style="font-size: 0.6rem;"> <!--slap-->
-            <br>
-            <a href="https://www.genialabile.com/terms-and-conditions" style="font-weight: normal">TERMS</a> | 
-            <a href="https://www.genialabile.com/privacy-policy" style="font-weight: normal">PRIVACY</a> | 
-            <a href="https://www.genialabile.com/cookie-policy" style="font-weight: normal">COOKIES</a> | 
-            <a href="https://www.genialabile.com/accessibility" style="font-weight: normal">ACCESS</a> | 
-            <a href="https://www.genialabile.com/contacts" style="font-weight: normal">CONTACT</a>
-            <!-- | <a href="/faq.html" style="font-weight: normal">FAQ</a>  -->
-        </p>
-    <!-- <br><br><br><br><br><br><br> --->
-</footer>
+<!---// ENDLINE & BYE BYE //--->
