--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -10,9 +10,11 @@ Use, distribution, or modification of this project is strictly prohibited withou
 ---
 hptts://www.genialabile.com/
 //--->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
         <meta name="description" content="GENiALABILE - Terms & Conditions Disclosure.">
