--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,7 @@
 <!---//
 # Gen-IA
 Advanced-GPT inspiring multidimensional solutions and unlocking creative potential.
-
+---
 ## License
 © 2025 GENiALABILE. All Rights Reserved.
 A GPT Based Project—Designed by @seiseisette. 
@@ -11,7 +11,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 hptts://www.genialabile.com/footer.html
 //--->
 
-<!---// STARTLINE & HI HI //--->
+<!---// STARTLINE & SAY HI //--->
     <footer> <b></b>
         © 2025 <a href="https://www.genialabile.com/" style="font-weight: normal">GENiALABILE</a>.
         All Rights Reserved.
@@ -30,4 +30,4 @@ hptts://www.genialabile.com/footer.html
         <!-- <br><br><br><br><br><br><br> --->
     </footer>
 
-<!---// ENDLINE & BYE BYE //--->
+<!---// ENDLINE & SAY BYE //--->
