--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <!---//
 # Gen-IA
 Advanced-GPT inspiring multidimensional solutions and unlocking creative potential.
-
+---
 ## License
 © 2025 GENiALABILE. All Rights Reserved.
 A GPT Based Project—Designed by @seiseisette. 
@@ -19,17 +19,17 @@ hptts://www.genialabile.com/header.html
     <meta name="theme-color" content="#000000">
     <meta name="theme-color" content="#000000" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
-    <link rel="icon" href="https://www.genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-
+    <link rel="icon" href="https://www.genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon">
+    
     <script>
         document.body.style.display = "none";
     </script>
 
-     <!-- CSS ------------------------------------------------------------------>
+    <!-- CSS ------------------------------------------------------------------>
         <script>
-            fetch('css.html')
+            fetch('hptts://www.genialabile.com/css.html')
                 .then(response => response.text())
                 .then(data => {
                     document.querySelector('head').innerHTML += data;
