--- a/index.html
+++ b/index.html
@@ -1,32 +1,33 @@
 <!---//
 # Gen-IA
 Advanced-GPT inspiring multidimensional solutions and unlocking creative potential.
-
+---
 ## License
 © 2025 GENiALABILE. All Rights Reserved.
 A GPT Based Project—Designed by @seiseisette. 
 This project is no longer available as open-source. Updated to 10 Jan 2025.
 Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
 ---
-hptts://www.genialabile.com/
+hptts://www.genialabile.com/index.html
 //--->
 
+<!---// STARTLINE & SAY BYE //--->
 <!DOCTYPE html>
 <html lang="en">
     
     <head>
         <title>GENiALABILE</title>
         <meta name="description" content="GENiALABILE - Advanced-GPT Project designed to inspire multidimensional solutions and unlock creativity.">
-        <!-- Head ------------------------------------------------------------------>
+        <!-- HEAD ------------------------------------------------------------------>
             <script>
-                fetch('header.html')
+                fetch('hptts://www.genialabile.com/header.html')
                     .then(response => response.text())
                     .then(data => {
                         document.querySelector('head').innerHTML += data;
                     })
                     .catch(error => console.error('Errore nel caricamento header:', error));
             </script>
-        <!-- Head ------------------------------------------------------------------> 
+        <!-- HEAD ------------------------------------------------------------------> 
     </head>
     
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
@@ -34,11 +35,14 @@ hptts://www.genialabile.com/
         <main>
             <h1>
                 <a href="https://www.genialabile.com/" onmouseover="this.style.color='#00ff00'; this.style.textDecoration='underline';" onmouseout="this.style.color='white'; this.style.textDecoration='none';">
-                GENiALABILE</a>
+                    GENiALABILE
+                </a>
             </h1>
             <p>
                 running as a beta version in preview access.
-                    <a href= "mailto:genialabile@gmail.com?subject=Request%20for%20Beta%20Access&body=Hello!%20I%20would%20like%20to%20request%20beta%20access%20to%20your%20application." >[>]</a>
+                    <a href= "mailto:genialabile@gmail.com?subject=Request%20for%20Beta%20Access&body=Hello!%20I%20would%20like%20to%20request%20beta%20access%20to%20your%20application.">
+                        />
+                    </a>
                 <br>
             </p>
             <h1>
@@ -46,7 +50,9 @@ hptts://www.genialabile.com/
             </h1>
             <p>
                 an Advanced Bio-GPT inspiring multidimensional solutions and unlocking creative potential.
-                    <a href= "https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=Who%20is%20GENiALABILE%3F%20Complete%20description" target="_blank" >[>]</a>
+                    <a href= "https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=Who%20is%20GENiALABILE%3F%20Complete%20description" target="_blank">
+                        />
+                    </a>
                 <br>
             </p>
             <h1>
@@ -54,7 +60,9 @@ hptts://www.genialabile.com/
             </h1> 
             <p>
                 to empower users with predictive analytics, mentoring, and interactive simulations, unlocking new paths for learning, exploration, and growth.
-                <a href= "https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=What%20is%20GENiALABILE%27s%20mission%3F%20Detailed%20overview" target="_blank" >[>]</a>
+                    <a href= "https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=What%20is%20GENiALABILE%27s%20mission%3F%20Detailed%20overview" target="_blank">
+                        />
+                    </a>
                 <br>
             </p>
             <h1>
@@ -62,7 +70,9 @@ hptts://www.genialabile.com/
             </h1>
             <p>
                 predictive models, multidimensional simulations, emotional insights, and multilingual adaptability. GENiALABILE is built to go beyond limits.
-                    <a href= "https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=GENiALABILE%20features%20-%20Detailed%20list%20and%20overview" target="_blank" >[>]</a>
+                    <a href= "https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=GENiALABILE%20features%20-%20Detailed%20list%20and%20overview" target="_blank">
+                        />
+                    </a>
                 <br>
             </p>
             <h1>
@@ -70,7 +80,9 @@ hptts://www.genialabile.com/
             </h1>
             <p>
                 in education, research, coaching, therapy, and creative development. GENiALABILE adapts to your needs, turning challenges into solutions. 
-                    <a href= "https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=GENiALABILE%20and%20Bio-Feedback%20Practical%20Applications%20-%20Detailed%20examples" target="_blank" >[>]</a>
+                    <a href= "https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=GENiALABILE%20and%20Bio-Feedback%20Practical%20Applications%20-%20Detailed%20examples" target="_blank">
+                        />
+                    </a>
                 <br>
             </p>
             <h1>
@@ -78,7 +90,9 @@ hptts://www.genialabile.com/
             </h1>
             <p>
                 with AR, VR, and immersive simulations like Sora, and augmented reality simulations for new educational and therapeutic experiences.
-                    <a href="https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=Future%20vision%20of%20GENiALABILE%20-%20Predictions%20and%20developments" target="_blank">[>]</a>
+                    <a href="https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=Future%20vision%20of%20GENiALABILE%20-%20Predictions%20and%20developments" target="_blank">
+                        />
+                    </a>
                 <br>
             </p>
             <h1>
@@ -86,13 +100,15 @@ hptts://www.genialabile.com/
             </h1>
             <p>
                 to building a future where learning and creativity transcend boundaries.
-                    <a href="https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=Complete%20Contact%20GENiALABILE%20-%20And%20Social%20Media%20and%20Email%20details" target="_blank">[>]</a>
+                    <a href="https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=Complete%20Contact%20GENiALABILE%20-%20And%20Social%20Media%20and%20Email%20details" target="_blank">
+                        />
+                    </a>
                 <br>
             </p>
 
         </main>
 
-        <!-- Footer ------------------------------------------------------------------>
+        <!-- FOOT  ------------------------------------------------------------------>
             <script>
                 document.addEventListener('DOMContentLoaded', function() {
                     fetch('footer.html')
@@ -106,7 +122,7 @@ hptts://www.genialabile.com/
                     .catch(error => console.error('Errore nel caricamento del footer:', error));
                 });
             </script> 
-        <!-- Footer ------------------------------------------------------------------>
+        <!-- FOOT ------------------------------------------------------------------>
 
         <script>
             document.addEventListener("DOMContentLoaded", function () {
@@ -118,4 +134,4 @@ hptts://www.genialabile.com/
 
     </body>
 </html>
-<!---// ENDLINE & BYE BYE //--->
+<!---// ENDLINE & SAY BYE //--->
