Corretto l'URL nel caricamento dinamico del footer in index.html

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ hptts://www.genialabile.com/index.html
         <!-- FOOT  ------------------------------------------------------------------>
             <script>
                 document.addEventListener('DOMContentLoaded', function() {
-                    fetch('footer.html')
+                    fetch('hptts://www.genialabile.com/footer.html')
                         .then(response => response.text())
                         .then(data => {
                             const body = document.querySelector('body');
