--- a/contacts.html
+++ b/contacts.html
@@ -8,7 +8,7 @@ A GPT Based Project—Designed by @seiseisette.
 This project is no longer available as open-source. Updated to 10 Jan 2025.
 Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
 ---
-hptts://www.genialabile.com/
+hptts://www.genialabile.com/contact.html
 //--->
 <!DOCTYPE html>
 <html lang="en">
@@ -22,7 +22,7 @@ hptts://www.genialabile.com/
         <link rel="icon" href="gen-favicon-rd.ico?v=2" type="image/x-icon">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
         <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
-        
+
         <!-- Header -->
             <script>
                 fetch('header.html')
@@ -31,6 +31,7 @@ hptts://www.genialabile.com/
                         document.querySelector('head').innerHTML += data;
                     })
                     .catch(error => console.error('Errore nel caricamento header:', error));
+                    document.querySelector('head').innerHTML += '<!-- Static Header Fallback -->';
             </script> 
         <!-- Header -->
 
