Corretto l'URL nel caricamento dinamico in contacts.html e header.html per garantire il corretto funzionamento delle risorse.

--- a/header.html
+++ b/header.html
@@ -29,7 +29,7 @@ hptts://www.genialabile.com/header.html
 
     <!-- CSS ------------------------------------------------------------------>
         <script>
-            fetch('hptts://www.genialabile.com/css.html')
+            fetch('https://www.genialabile.com/css.html')
                 .then(response => response.text())
                 .then(data => {
                     document.querySelector('head').innerHTML += data;
