--- a/contacts.html
+++ b/contacts.html
@@ -1,14 +1,14 @@
 <!---//
 # Gen-IA
 Advanced-GPT inspiring multidimensional solutions and unlocking creative potential.
-
+---
 ## License
 © 2025 GENiALABILE. All Rights Reserved.
 A GPT Based Project—Designed by @seiseisette. 
 This project is no longer available as open-source. Updated to 10 Jan 2025.
 Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
 ---
-hptts://www.genialabile.com/contact.html
+hptts://www.genialabile.com/contacts.html
 //--->
 <!DOCTYPE html>
 <html lang="en">
@@ -25,7 +25,7 @@ hptts://www.genialabile.com/contact.html
 
         <!-- Header -->
             <script>
-                fetch('header.html')
+                fetch('hptts://www.genialabile.com/header.html')
                     .then(response => response.text())
                     .then(data => {
                         document.querySelector('head').innerHTML += data;
@@ -129,7 +129,7 @@ hptts://www.genialabile.com/contact.html
         <!-- Footer ------------------------------------------------------------------>
         <script>
             document.addEventListener('DOMContentLoaded', function() {
-                fetch('footer.html')
+                fetch('hptts://www.genialabile.com/footer.html')
                     .then(response => response.text())
                     .then(data => {
                         const body = document.querySelector('body');
