--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ A GPT Based Project—Designed by @seiseisette.
 This project is no longer available as open-source. Updated to 10 Jan 2025.
 Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
 ---
-hptts://www.genialabile.com/index.html
+https://www.genialabile.com/index.html
 //--->
 
 <!---// STARTLINE & SAY BYE //--->
@@ -20,7 +20,7 @@ hptts://www.genialabile.com/index.html
         <meta name="description" content="GENiALABILE - Advanced-GPT Project designed to inspire multidimensional solutions and unlock creativity.">
         <!-- HEAD ------------------------------------------------------------------>
             <script>
-                fetch('hptts://www.genialabile.com/header.html')
+                fetch('https://www.genialabile.com/header.html')
                     .then(response => response.text())
                     .then(data => {
                         document.querySelector('head').innerHTML += data;
@@ -111,7 +111,7 @@ hptts://www.genialabile.com/index.html
         <!-- FOOT  ------------------------------------------------------------------>
             <script>
                 document.addEventListener('DOMContentLoaded', function() {
-                    fetch('hptts://www.genialabile.com/footer.html')
+                    fetch('https://www.genialabile.com/footer.html')
                         .then(response => response.text())
                         .then(data => {
                             const body = document.querySelector('body');
