--- a/contacts.html
+++ b/contacts.html
@@ -8,7 +8,7 @@ A GPT Based Project—Designed by @seiseisette.
 This project is no longer available as open-source. Updated to 10 Jan 2025.
 Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
 ---
-hptts://www.genialabile.com/contacts.html
+hppts://www.genialabile.com/contacts.html
 //--->
 <!DOCTYPE html>
 <html lang="en">
@@ -25,7 +25,7 @@ hptts://www.genialabile.com/contacts.html
 
         <!-- Header -->
             <script>
-                fetch('hptts://www.genialabile.com/header.html')
+                fetch('hppts://www.genialabile.com/header.html')
                     .then(response => response.text())
                     .then(data => {
                         document.querySelector('head').innerHTML += data;
@@ -129,7 +129,7 @@ hptts://www.genialabile.com/contacts.html
         <!-- Footer ------------------------------------------------------------------>
         <script>
             document.addEventListener('DOMContentLoaded', function() {
-                fetch('hptts://www.genialabile.com/footer.html')
+                fetch('hppts://www.genialabile.com/footer.html')
                     .then(response => response.text())
                     .then(data => {
                         const body = document.querySelector('body');
