--- a/header.html
+++ b/header.html
@@ -38,4 +38,15 @@ https://www.genialabile.com/header.html
         </script>
     <!-- CSS ------------------------------------------------------------------>
 
+    <!-- CSS ------------------------------------------------------------------>
+    <script>
+        fetch('https://www.genialabile.com/css-card.html')
+            .then(response => response.text())
+            .then(data => {
+                document.querySelector('head').innerHTML += data;
+            })
+            .catch(error => console.error('Errore nel caricamento del CSS dinamico:', error));
+    </script>
+<!-- CSS ------------------------------------------------------------------>
+
 <!---// ENDLINE & SAY BYE //--->
