--- a/contacts.html
+++ b/contacts.html
@@ -36,7 +36,7 @@ https://www.genialabile.com/contacts.html
         <!-- Header -->
 
          <!-- CSS-Card ------------------------------------------------------------------>
-            <script>
+<!----            <script>
                 fetch('css-card.html')
                     .then(response => response.text())
                     .then(data => {
@@ -45,6 +45,7 @@ https://www.genialabile.com/contacts.html
                     .catch(error => console.error('Errore nel caricamento del CSS-Card dinamico:', error));
             </script>
         <!-- CSS-Card ------------------------------------------------------------------>
+        <link rel="stylesheet" href="https://www.genialabile.com/css-card.html">
 
     </head>
 
