--- a/header.html
+++ b/header.html
@@ -38,14 +38,14 @@ https://www.genialabile.com/header.html
     <!-- CSS ------------------------------------------------------------------>
 
     <!-- CSS ------------------------------------------------------------------>
-    <script>
+     <!---//<script>
         fetch('https://www.genialabile.com/css-card.html')
             .then(response => response.text())
             .then(data => {
                 document.querySelector('head').innerHTML += data;
             })
-            .catch(error => console.error('Errore nel caricamento del CSS dinamico:', error));
-    </script>
+            .catch(error => console.error('Errore nel caricamento del CSS-Card dinamico:', error));
+    </script> //--->
     <!-- CSS ------------------------------------------------------------------>
 
 <!---// ENDLINE & SAY BYE //--->
