rimosso fetch head

--- a/header.html
+++ b/header.html
@@ -27,7 +27,7 @@ https://www.genialabile.com/header.html
     </script>
     //--->
     <!-- CSS ------------------------------------------------------------------>
-        <script>
+        <!---// <script>
             fetch('https://www.genialabile.com/css.html')
                 .then(response => response.text())
                 .then(data => {
@@ -36,6 +36,7 @@ https://www.genialabile.com/header.html
                 .catch(error => console.error('Errore nel caricamento del CSS dinamico:', error));
         </script>
     <!-- CSS ------------------------------------------------------------------>
+    <link rel="stylesheet" href="https://www.genialabile.com/css.html">
 
     <!-- CSS ------------------------------------------------------------------>
      <!---//<script>
