Aggiunto un link al foglio di stile CSS in contacts.html

--- a/contacts.html
+++ b/contacts.html
@@ -45,6 +45,7 @@ https://www.genialabile.com/contacts.html
                     .catch(error => console.error('Errore nel caricamento del CSS-Card dinamico:', error));
             </script>
         <!-- CSS-Card ------------------------------------------------------------------>
+        <link rel="stylesheet" href="https://www.genialabile.com/css.html">
         <link rel="stylesheet" href="https://www.genialabile.com/css-card.html">
 
     </head>
