--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@ https://www.genialabile.com/index.html
                     .catch(error => console.error('Errore nel caricamento header:', error));
             </script>
         <!-- HEAD ------------------------------------------------------------------> 
-         
+        <link rel="stylesheet" href="https://www.genialabile.com/head.html">
+        <link rel="stylesheet" href="https://www.genialabile.com/css.html">
     </head>
     
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
