--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ https://www.genialabile.com/index.html
         <title>GENiALABILE</title>
         <meta name="description" content="GENiALABILE - Advanced-GPT Project designed to inspire multidimensional solutions and unlock creativity.">
         <!-- HEAD ------------------------------------------------------------------>
-       <!--->     <script>
+            <script>
                 fetch('https://www.genialabile.com/header.html')
                     .then(response => response.text())
                     .then(data => {
@@ -28,8 +28,8 @@ https://www.genialabile.com/index.html
                     .catch(error => console.error('Errore nel caricamento header:', error));
             </script>
         <!-- HEAD ------------------------------------------------------------------> 
-        <link rel="stylesheet" href="https://www.genialabile.com/head.html">
-        <link rel="stylesheet" href="https://www.genialabile.com/css.html">
+    
+        <link rel="stylesheet" href="https://www.genialabile.com/main.css">
     </head>
     
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
