--- a/header.html
+++ b/header.html
@@ -36,7 +36,7 @@ https://www.genialabile.com/header.html
                 .catch(error => console.error('Errore nel caricamento del CSS dinamico:', error));
         </script>
     <!-- CSS ------------------------------------------------------------------>
-    <link rel="stylesheet" href="https://www.genialabile.com/css.html">
+    <link rel="stylesheet" href="https://www.genialabile.com/main.css">
 
     <!-- CSS ------------------------------------------------------------------>
      <!---//<script>
