--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ https://www.genialabile.com/index.html
             </script>
         <!-- HEAD ------------------------------------------------------------------> 
     
-        <link rel="stylesheet" href="https://www.genialabile.com/main.css">
+       <!----- <link rel="stylesheet" href="https://www.genialabile.com/main.css"> -->
     </head>
     
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
