Rimosso il caricamento dinamico del CSS in header.html e aggiornato il tempo di attesa in index.html

--- a/footer.html
+++ b/footer.html
@@ -13,8 +13,7 @@ hptts://www.genialabile.com/footer.html
 
 <!---// STARTLINE & SAY HI //--->
     <footer> <b></b>
-        © 2025 <a href="https://www.genialabile.com/" style="font-weight: normal">GENiALABILE</a>.
-        All Rights Reserved.
+        © 2025 <a href="https://www.genialabile.com/" style="font-weight: normal">GENiALABILE</a>. All Rights Reserved.
         A Bio-GPT Project—Designed by <a href= "https://github.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.
         Powered by <a href= "https://openai.com/" style="font-weight: normal">OpenAI</a>.<br>
         <!-- <br><br><br><br><br><br><br> --->
