--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ https://www.genialabile.com/index.html
                     .then(data => {
                         document.querySelector('head').innerHTML += data;
                     })
-                    .catch(error => console.error('Errore nel caricamento header:', error));
+                    .catch(error => console.error('Errore nel caricamento Header:', error));
             </script>
         <!-- HEAD ------------------------------------------------------------------> 
     
