--- a/header.html
+++ b/header.html
@@ -26,7 +26,7 @@ https://www.genialabile.com/header.html
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     
-       <!---- <script>
+       <script>
             document.body.style.display = "none";
         </script>
     
