--- a/header.html
+++ b/header.html
@@ -22,6 +22,7 @@ https://www.genialabile.com/header.html
     <!-- CSS ------------------------------------------------------------------>
         <link rel="stylesheet" href="https://www.genialabile.com/main.css">
         <link rel="stylesheet" href="https://www.genialabile.com/card.css">
+        <link rel="stylesheet" href="https://www.genialabile.com/banner.css">
     <!-- CSS ------------------------------------------------------------------>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
