Corretto il messaggio di errore nel caricamento del footer in index.html

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ https://www.genialabile.com/index.html
                             footerContainer.innerHTML = data;
                             body.appendChild(footerContainer);
                         })
-                    .catch(error => console.error('Errore nel caricamento del footer:', error));
+                    .catch(error => console.error('Errore nel caricamento del Footer:', error));
                 });
             </script> 
         <!-- FOOT ------------------------------------------------------------------>
