Corretto un errore di battitura nel file index.html per migliorare la chiarezza del testo

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ https://www.genialabile.com/index.html
                 Is
             </h1>
             <p>
-                an Advanced Bio-GPT inspiring multidimensional solutions and unlocking creative potential.
+                an Advanced-GPT inspiring multidimensional solutions and unlocking creative potential.
                     <a href= "https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=Who%20is%20GENiALABILE%3F%20Complete%20description" target="_blank">
                         />
                     </a>
