--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 https://www.genialabile.com/index.html
 //--->
 
-<!---// STARTLINE & SAY BYE //--->
+<!---// STARTLINE & SAY HI //--->
 <!DOCTYPE html>
 <html lang="en">
     
