--- a/header.html
+++ b/header.html
@@ -18,7 +18,6 @@ https://www.genialabile.com/header.html
     <meta name="color-scheme" content="dark">
     <meta name="theme-color" content="#000000" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
-    <link rel="icon" href="https://www.genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
        <script>
@@ -27,7 +26,7 @@ https://www.genialabile.com/header.html
     
      <!-- CSS ------------------------------------------------------------------>
         <link rel="stylesheet" href="https://www.genialabile.com/main.css">
-        <link rel="stylesheet" href="https://www.genialabile.com/card.css">
+<!-- <link rel="stylesheet" href="https://www.genialabile.com/card.css">
         <link rel="stylesheet" href="https://www.genialabile.com/banner.css">
     <!-- CSS ------------------------------------------------------------------>
     
