--- a/contacts.html
+++ b/contacts.html
@@ -23,7 +23,7 @@ https://www.genialabile.com/contacts.html
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
         <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
 
-        <!-- Header -->
+        <!-- HEAD ------------------------------------------------------------------> 
             <script>
                 fetch('https://www.genialabile.com/header.html')
                     .then(response => response.text())
@@ -33,23 +33,13 @@ https://www.genialabile.com/contacts.html
                     .catch(error => console.error('Errore nel caricamento header:', error));
                     document.querySelector('head').innerHTML += '<!-- Static Header Fallback -->';
             </script> 
-        <!-- Header -->
-
-         <!-- CSS-Card ------------------------------------------------------------------>
-<!----            <script>
-                fetch('css-card.html')
-                    .then(response => response.text())
-                    .then(data => {
-                        document.querySelector('head').innerHTML += data;
-                    })
-                    .catch(error => console.error('Errore nel caricamento del CSS-Card dinamico:', error));
-            </script>
-        <!-- CSS-Card ------------------------------------------------------------------>
-        <link rel="stylesheet" href="https://www.genialabile.com/css.html">
-        <link rel="stylesheet" href="https://www.genialabile.com/css-card.html">
-
+        <!-- HEAD ------------------------------------------------------------------> 
+        
+        <!-- CSS CARD ------------------------------------------------------------------>
+            <link rel="stylesheet" href="https://www.genialabile.com/card.css">
+        <!-- CSS CARD ------------------------------------------------------------------>
+        
     </head>
-
 
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <!-- Contenuto Principale -->
