Ripristinato il meta tag Content-Security-Policy e il meta tag viewport in header.html per garantire la compatibilità e la sicurezza della pagina

--- a/contacts.html
+++ b/contacts.html
@@ -15,13 +15,12 @@ https://www.genialabile.com/contacts.html
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-        <meta name="description" content="GENiALABILE - Contacts & Social Media and Credits.">
-        <!-- Titolo -->
+        
+    
         <title>GENiALABILE | Contacts</title>
-        <!-- Icone e Font -->
-        <link rel="icon" href="gen-favicon-rd.ico?v=2" type="image/x-icon">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-        <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
+        <meta name="description" content="GENiALABILE - Contacts & Social Media and Credits.">
+        <link rel="icon" href="https://www.genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon">
+        <link rel="canonical" href="https://www.genialabile.com/contacts.html">
 
         <!-- HEAD ------------------------------------------------------------------> 
             <script>
