Rimosso il meta tag charset e il meta tag viewport in contacts.html per semplificare il codice

--- a/contacts.html
+++ b/contacts.html
@@ -10,13 +10,11 @@ Use, distribution, or modification of this project is strictly prohibited withou
 ---
 https://www.genialabile.com/contacts.html
 //--->
+
+<!---// STARTLINE & SAY HI //--->
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-        
-    
         <title>GENiALABILE | Contacts</title>
         <meta name="description" content="GENiALABILE - Contacts & Social Media and Credits.">
         <link rel="icon" href="https://www.genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon">
