Aggiunti meta tag Open Graph e Twitter in header.html; ripristinato il meta tag viewport in index.html e aggiornati i commenti in card.css e main.css per migliorare la chiarezza del codice

--- a/header.html
+++ b/header.html
@@ -17,7 +17,18 @@ https://www.genialabile.com/header.html
     <meta name="theme-color" content="#000000" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+
+    <meta property="og:title" content="GENiALABILE | Unique Page Title">
+    <meta property="og:description" content="Custom description for this page.">
+    <meta property="og:image" content="https://www.genialabile.com/assets/specific-image.jpg">
+    <meta property="og:url" content="https://www.genialabile.com/specific-page.html">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="GENiALABILE | Unique Page Title">
+    <meta name="twitter:description" content="Custom description for this page.">
+    <meta name="twitter:image" content="https://www.genialabile.com/assets/specific-image.jpg">
+    
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
 
