--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@ https://www.genialabile.com/index.html
     <head>
         <title>GENiALABILE</title>
         <meta name="description" content="GENiALABILE - Advanced-GPT Project designed to inspire multidimensional solutions and unlock creativity.">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+        
         <link rel="icon" href="https://www.genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon">
         <link rel="canonical" href="https://www.genialabile.com/index.html">
         
