Aggiornati i link in contacts.html per includere il protocollo completo e migliorare la navigabilità

--- a/contacts.html
+++ b/contacts.html
@@ -63,7 +63,9 @@ https://www.genialabile.com/contacts.html
                 <b>1. Website</b>
                     <br><br>
                     Our official website: 
-                        <a href="/" style="font-weight: normal;">genialabile.com</a>
+                        <a href="https://www.genialabile.com/" style="font-weight: normal;">
+                            www.genialabile.com
+                        </a>
                 <br><br><br>
 
                 <b>2. Email</b>
@@ -77,22 +79,22 @@ https://www.genialabile.com/contacts.html
                 <b>3. Social Media</b>
                     <br><br>
                     X (Twitter): 
-                        <a href="https://x.com/genialabile" style="font-weight: normal;">
+                        <a href="https://x.com/genialabile/" style="font-weight: normal;">
                             @genialabile
                         </a>
                     <br><br>
                     Instagram: 
-                        <a href="https://instagram.com/genialabile" style="font-weight: normal;">
+                        <a href="https://instagram.com/genialabile/" style="font-weight: normal;">
                             @genialabile
                         </a>
                     <br><br>
                     Threads:
-                        <a href="https://threads.net/@genialabile" style="font-weight: normal;">
+                        <a href="https://threads.net/@genialabile/" style="font-weight: normal;">
                             @genialabile
                         </a>
                     <br><br>
                     YouTube:
-                        <a href="https://youtube.com/@genialabile" style="font-weight: normal;">
+                        <a href="https://youtube.com/@genialabile/" style="font-weight: normal;">
                             @genialabile
                         </a>
                     <!---
@@ -107,13 +109,13 @@ https://www.genialabile.com/contacts.html
                     <br><br>
 
                     Hosted by GitHub Pages:
-                        <a href="https://github.com/seiseisette/Gen-IA" style="font-weight: normal;">
+                        <a href="https://github.com/seiseisette/Gen-IA/" style="font-weight: normal;">
                             Gen-IA
                         </a>
                     <br><br>
 
                     Designed by: 
-                        <a href="https://x.com/seiseisette" style="font-weight: normal;">
+                        <a href="https://x.com/seiseisette/" style="font-weight: normal;">
                             seiseisette
                         </a>
                 <br><br><br>
@@ -126,7 +128,10 @@ https://www.genialabile.com/contacts.html
                         <div class="card-text">
                         
                             <p>
-                                <a href="/"  style="font-weight: normal;">GENiALABILE</a> ✧⌝
+                                <a href="https://www.genialabile.com/"  style="font-weight: normal;">
+                                    GENiALABILE
+                                </a> 
+                                ✧⌝
                                 <br>
                                 Multidimensional Ave,
                                 <br>
