Aggiunto meta tag viewport in contacts.html per migliorare la responsività

--- a/contacts.html
+++ b/contacts.html
@@ -17,6 +17,8 @@ https://www.genialabile.com/contacts.html
     <head>
         <title>GENiALABILE | Contacts</title>
         <meta name="description" content="GENiALABILE - Contacts & Social Media and Credits.">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+
         <link rel="icon" href="https://www.genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon">
         <link rel="canonical" href="https://www.genialabile.com/contacts.html">
 
