Rinominati i selettori CSS per migliorare la coerenza e la leggibilità del codice

--- a/contacts.html
+++ b/contacts.html
@@ -48,7 +48,7 @@ https://www.genialabile.com/contacts.html
                     {Last Updated: 10 January 2025}
                 </p>
 
-            <p class="imp-pless">
+            <p class="imp-l">
                 <br><br>
                 
                 <b>0. Welcome to GENiALABILE</b>
@@ -147,7 +147,7 @@ https://www.genialabile.com/contacts.html
         </main>
 
 
-        <!-- Footer ------------------------------------------------------------------>
+        <!-- FOOT  ------------------------------------------------------------------>
         <script>
             document.addEventListener('DOMContentLoaded', function() {
                 fetch('https://www.genialabile.com/footer.html')
@@ -158,16 +158,16 @@ https://www.genialabile.com/contacts.html
                         footerContainer.innerHTML = data;
                         body.appendChild(footerContainer);
                     })
-                .catch(error => console.error('Errore nel caricamento del footer:', error));
+                .catch(error => console.error('Errore nel caricamento del Footer:', error));
             });
         </script> 
-        <!-- Footer ------------------------------------------------------------------>
+        <!-- FOOT ------------------------------------------------------------------>
 
         <script>
             document.addEventListener("DOMContentLoaded", function () {
                 setTimeout(function () {
                     document.body.classList.add("visible");
-                }, 2000);
+                }, 2000); 
             });
         </script>
 
