--- a/footer.html
+++ b/footer.html
@@ -14,7 +14,7 @@ https://www.genialabile.com/footer.html
 <!---// STARTLINE & SAY HI //--->
     <footer> <b></b>
         © 2025 <a href="https://www.genialabile.com/" style="font-weight: normal">GENiALABILE</a>. All Rights Reserved.
-        A Bio-GPT Project—Designed by <a href= "https://github.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.
+        Advanced-GPT Project—Designed by <a href= "https://github.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.
         Powered by <a href= "https://openai.com/" style="font-weight: normal">OpenAI</a>.<br>
         <!-- <br><br><br><br><br><br><br> --->
             <p class="imp-p" style="font-size: 0.6rem;">
