--- a/contacts.html
+++ b/contacts.html
@@ -123,17 +123,13 @@ https://www.genialabile.com/contacts.html
                 <br><br><br>
            
                 <b>5. Virtual Address</b>
-                    <br><br>
-
                     <div class="card">
                         <div class="card-image-container">
                             <img src="https://www.genialabile.com/gen-favicon-rd.ico?v=2" alt="GENiALABILE Logo" class="card-image" loading="lazy">
                         </div>
                         <div class="card-text">
                             <p>
-                                <a href="https://www.genialabile.com/"  style="font-weight: normal;">
-                                    GENiALABILE
-                                </a> 
+                                <a href="https://www.genialabile.com/"  style="font-weight: normal;">GENiALABILE</a> 
                                 ✧⌝
                                 <br>
                                 Multidimensional Ave,
