--- a/contacts.html
+++ b/contacts.html
@@ -38,9 +38,9 @@ https://www.genialabile.com/contacts.html
         <!-- HEAD ------------------------------------------------------------------> 
         
         <!-- CSS CARD ------------------------------------------------------------------>
-           <!--- <link rel="stylesheet" href="https://www.genialabile.com/card.css">
-            -->
-            <style>
+        <link rel="stylesheet" href="https://www.genialabile.com/card.css">
+            
+        <!-->  <style>
 
                 .card {
                     display: flex;
