Formattazione & Pulizia Footer

--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-<!---//
+<!--//
 # Gen-IA
 Advanced-GPT inspiring multidimensional solutions and unlocking creative potential.
 ---
@@ -9,26 +9,49 @@ This project is no longer available as open-source. Updated to 10 Jan 2025.
 Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
 ---
 https://www.genialabile.com/footer.html
-//--->
+//-->
 
 <!---// STARTLINE & SAY HI //--->
 
     <footer> 
-        <b></b>
+        <b></b> <!-- INLINE -->
         © 2025 <a href="https://www.genialabile.com/" style="font-weight: normal">GENiALABILE</a>. All Rights Reserved.
         Advanced-GPT Project—Designed by <a href= "https://github.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.
-        Powered by <a href= "https://openai.com/" style="font-weight: normal">OpenAI</a>.<br>
-        <!-- <br><br><br><br><br><br><br> --->
+        Powered by <a href= "https://openai.com/" style="font-weight: normal">OpenAI</a>.
+        <br>
+        <!-- <br><br><br><br><br><br><br> -->
             <p class="imp-p" style="font-size: 0.7rem;">
                 <br>
-                <a href="https://www.genialabile.com/terms-and-conditions" style="font-weight: normal">TERMS</a> | 
-                <a href="https://www.genialabile.com/privacy-policy" style="font-weight: normal">PRIVACY</a> | 
-                <a href="https://www.genialabile.com/cookie-policy" style="font-weight: normal">COOKIES</a> | 
-                <a href="https://www.genialabile.com/accessibility" style="font-weight: normal">ACCESS</a> | 
-                <a href="https://www.genialabile.com/contacts" style="font-weight: normal">CONTACT</a>
-                <!-- | <a href="https://www.genialabile.com//faq" style="font-weight: normal">FAQ</a>  -->
+                <a href="https://www.genialabile.com/" style="font-weight: normal">
+                    CAMPOBASE
+                </a>
+                |
+                <a href="https://www.genialabile.com/contacts" style="font-weight: normal">
+                    LINKS
+                </a>
+                <!-- DRAFT
+                <a href="https://www.genialabile.com//faq" style="font-weight: normal">
+                    FAQ
+                </a>  DRAFT -->
+                | 
+                <a href="https://www.genialabile.com/terms-and-conditions" style="font-weight: normal">
+                    TERMS
+                </a>
+                |
+                <a href="https://www.genialabile.com/privacy-policy" style="font-weight: normal">
+                    PRIVACY
+                </a>
+                | 
+                <a href="https://www.genialabile.com/cookie-policy" style="font-weight: normal">
+                    COOKIES
+                </a>
+                | 
+                <a href="https://www.genialabile.com/accessibility" style="font-weight: normal">
+                    ACCESS
+                </a>
+                
             </p>
-        <!-- <br><br><br><br><br><br><br> --->
+        <!-- <br><br><br><br><br><br><br> -->
     </footer>
 
 <!---// ENDLINE & SAY BYE //--->
