Aggiunta di un testo di prova nel footer.html

--- a/footer.html
+++ b/footer.html
@@ -50,7 +50,7 @@ https://www.genialabile.com/footer.html
                 <a href="https://www.genialabile.com/accessibility" style="font-weight: normal">
                     ACCESS
                 </a>
-                
+                |TESTING
             </p>
         <!-- <br><br><br><br><br><br><br> -->
     </footer>
