--- a/footer.html
+++ b/footer.html
@@ -14,6 +14,7 @@ https://www.genialabile.com/footer.html
 <!---// STARTLINE & SAY HI //--->
 
     <footer> 
+        * We are testing the website. Please, do not take nothing as official since this message is on-screen. Thank you. *
         <b></b> <!-- INLINE -->
         © 2025 <a href="https://www.genialabile.com/" style="font-weight: normal">GENiALABILE</a>. All Rights Reserved.
         Advanced-GPT Project—Designed by <a href= "https://github.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.
@@ -23,34 +24,27 @@ https://www.genialabile.com/footer.html
             <p class="imp-p" style="font-size: 0.7rem;">
                 <br>
                 <a href="https://www.genialabile.com/" style="font-weight: normal">
-                    CAMPOBASE
-                </a>
+                    CAMPOBASE</a>
                 |
                 <a href="https://www.genialabile.com/contacts" style="font-weight: normal">
-                    LINKS
-                </a>
+                    LINKS</a>
                 <!-- DRAFT
                     |
                     <a href="https://www.genialabile.com//faq" style="font-weight: normal">
-                        FAQ
-                </a>  DRAFT -->
+                        FAQ</a>  
+                DRAFT -->
                 |
                 <a href="https://www.genialabile.com/terms-and-conditions" style="font-weight: normal">
-                    TERMS
-                </a>
+                    TERMS</a>
                 |
                 <a href="https://www.genialabile.com/privacy-policy" style="font-weight: normal">
-                    PRIVACY
-                </a>
+                    PRIVACY</a>
                 | 
                 <a href="https://www.genialabile.com/cookie-policy" style="font-weight: normal">
-                    COOKIES
-                </a>
+                    COOKIES</a>
                 | 
                 <a href="https://www.genialabile.com/accessibility" style="font-weight: normal">
-                    ACCESS
-                </a>
-                |TESTING
+                    ACCESS</a>
             </p>
         <!-- <br><br><br><br><br><br><br> -->
     </footer>
