--- a/footer.html
+++ b/footer.html
@@ -16,7 +16,7 @@ https://www.genialabile.com/footer.html
     <footer> 
         <b> <!-- ALERT MODE -->
             * We are testing the website. Please, do not take nothing as official since this message is on-screen. Thank you. *
-        <b><br><!-- // ALERT MODE -->
+        </b><br><br><br><br><!-- // ALERT MODE -->
         © 2025 <a href="https://www.genialabile.com/" style="font-weight: normal">GENiALABILE</a>. All Rights Reserved.
         Advanced-GPT Project—Designed by <a href= "https://github.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.
         Powered by <a href= "https://openai.com/" style="font-weight: normal">OpenAI</a>.
